--- a/message-app/package.json
+++ b/message-app/package.json
@@ -16,11 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "4.21.2",
+    "moment-timezone": "^0.5.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.2.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.1",
     "tailwindcss": "^4.0.7"
   },
   "devDependencies": {
